Add primitive linting to .travis.yml
Print out a diff and fail the build if go source files do not match the
output of gofmt.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ go:
     - 1.5
     - 1.6
     - tip
+
+script:
+    - for i in $(find . -iname "*.go"); do gofmt -d $i; done 
+    - echo '! for i in $(find . -iname "*.go"); do gofmt -l $i; done | read' | bash
