--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: required
 
 before_install:
   - sudo apt-get update -q
-  - sudo apt-get install -y gcc libkrb5-dev
+  - sudo apt-get install -y gcc heimdal-dev
   - go get -v
   - go get -v github.com/stretchr/testify
 
